[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyscan"
version = "0.1.0"
description = "A tiny, modular, hexagonal port scanner (mini-Nmap)."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Zoel Arias Manchón" }]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
syn = ["scapy>=2.5"]
tui = ["textual>=0.60"]
lab = ["pymodbus>=3.5"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "textual>=0.60",
]

[project.scripts]
pyscan = "pyscan.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pyscan"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
